offline saves added

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -630,7 +630,7 @@ ContentBrowserTab4.JumpMRU=/All/Game
 LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -2213,6 +2213,7 @@ EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
 InterchangeFbxSettings.FBX=True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -3118,7 +3119,6 @@ StaticMesh.ImportSettings=False
 StaticMesh.RayTracing=False
 StaticMesh.Navigation=True
 InterchangeGenericAssetsPipeline.Extra Information=True
-InterchangeFbxSettings.FBX =True
 K2Node_InputAction.Input=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
