--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -474,6 +474,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.1.
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.1.Base
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.402321154DEFEFFAD38259B52E6036EE
 W_MainHUD_C=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/UI
@@ -680,7 +681,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/BluePrints/BP_Block.BP_Block
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/UI/W_MainHUD.W_MainHUD
 
@@ -3607,6 +3607,10 @@ TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appe
 Font="\"Object\" \"Object.Font\" "
 W_MainHUD_C="\"Object\" "
 UserWidget="\"Object\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3828,7 +3832,7 @@ MRUItem29=/Game/NewInputAction
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
 bShowGraphInstructionText=True
-bHideUnrelatedNodes=False
+bHideUnrelatedNodes=True
 bShowShortTooltips=True
 bShowFunctionParameterIcon=True
 bShowFunctionLocalVariableIcon=True
