--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -475,6 +475,8 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.1.Base
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.402321154DEFEFFAD38259B52E6036EE
 W_MainHUD_C=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+K2Node=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+K2Node_FormatText=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/UI
@@ -681,6 +683,7 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/UI/W_MainHUD.W_MainHUD
 
@@ -3767,10 +3770,10 @@ MaterialEditorInstanceConstant.General=False
 StaticMesh.Collision=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Engine/EngineFonts/Roboto
-MRUItem1=/Game/UI/W_MainHUD
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem1=/Engine/EngineFonts/Roboto
+MRUItem2=/Game/UI/W_MainHUD
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem4=/Game/BluePrints/BP_Block
 MRUItem5=/Game/Downloaded_Assets/MeshConversions/MeshVette
 MRUItem6=/Game/Downloaded_Assets/MeshConversions/MeshCop
@@ -4069,22 +4072,23 @@ ChangeVariableType_Warning=False
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
-Color1=(R=310.455780,G=0.959381,B=1.000000,A=1.000000)
-Color2=(R=237.264771,G=0.625000,B=0.375000,A=1.000000)
-Color3=(R=24.643776,G=0.640323,B=0.376262,A=1.000000)
-Color4=(R=245.153229,G=0.838542,B=0.317708,A=1.000000)
-Color5=(R=220.146744,G=0.505626,B=0.348958,A=1.000000)
-Color6=(R=228.588013,G=0.411458,B=0.359375,A=1.000000)
-Color7=(R=25.267073,G=1.000000,B=0.625000,A=1.000000)
-Color8=(R=238.454697,G=0.458333,B=0.623960,A=1.000000)
-Color9=(R=228.480408,G=0.856117,B=0.333333,A=1.000000)
-Color10=(R=65.621300,G=1.000000,B=1.000000,A=1.000000)
-Color11=(R=28.044489,G=0.854167,B=0.755208,A=1.000000)
-Color12=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
-Color13=(R=305.684662,G=0.997954,B=1.000000,A=1.000000)
-Color14=(R=2.153681,G=1.000000,B=1.000000,A=1.000000)
-Color15=(R=358.553345,G=1.000000,B=1.000000,A=1.000000)
+Color0=(R=16.043467,G=1.000000,B=1.000000,A=1.000000)
+Color1=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
+Color2=(R=310.455780,G=0.959381,B=1.000000,A=1.000000)
+Color3=(R=237.264771,G=0.625000,B=0.375000,A=1.000000)
+Color4=(R=24.643776,G=0.640323,B=0.376262,A=1.000000)
+Color5=(R=245.153229,G=0.838542,B=0.317708,A=1.000000)
+Color6=(R=220.146744,G=0.505626,B=0.348958,A=1.000000)
+Color7=(R=228.588013,G=0.411458,B=0.359375,A=1.000000)
+Color8=(R=25.267073,G=1.000000,B=0.625000,A=1.000000)
+Color9=(R=238.454697,G=0.458333,B=0.623960,A=1.000000)
+Color10=(R=228.480408,G=0.856117,B=0.333333,A=1.000000)
+Color11=(R=65.621300,G=1.000000,B=1.000000,A=1.000000)
+Color12=(R=28.044489,G=0.854167,B=0.755208,A=1.000000)
+Color13=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
+Color14=(R=305.684662,G=0.997954,B=1.000000,A=1.000000)
+Color15=(R=2.153681,G=1.000000,B=1.000000,A=1.000000)
+Color16=(R=358.553345,G=1.000000,B=1.000000,A=1.000000)
 
 [SkeletalMeshModelingTools]
 EditingModeActive=True
