laser wall basic

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -479,7 +479,7 @@ K2Node=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.Defaul
 K2Node_FormatText=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -652,13 +652,13 @@ ContentBrowserTab4.JumpMRU=/All/Game
 LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=FontEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=FontEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -684,9 +684,11 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
+OpenAssetsAtExit=/Game/BluePrints/BP_Block.BP_Block
 OpenAssetsAtExit=/Game/UI/W_MainHUD.W_MainHUD
+OpenAssetsAtExit=/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2245,6 +2247,7 @@ EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -3280,7 +3283,6 @@ SkeletalBodySetup.Collision=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
-InterchangeFbxSettings.FBX =True
 AssetManagerSettings.Asset Registry=True
 AudioSettings.Panning=True
 Engine.PerQualityLevelProperty=True
@@ -3327,6 +3329,21 @@ W_MainHUD_C.Navigation=True
 W_MainHUD_C.Designer=True
 W_MainHUD_C.Accessibility=True
 K2Node_FormatText.Arguments=True
+W_MainHUD_C.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -3608,17 +3625,18 @@ RecastNavMesh="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMes
 NavigationData="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" \"Object.Generation.NavLinkJumpDownConfig\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 Font="\"Object\" \"Object.Font\" "
-W_MainHUD_C="\"Object\" "
-UserWidget="\"Object\" "
+W_MainHUD_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
+SpringArmComponent="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3775,36 +3793,36 @@ MaterialEditorInstanceConstant.General=False
 StaticMesh.Collision=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem1=/Engine/EngineFonts/Roboto
-MRUItem2=/Game/UI/W_MainHUD
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/BluePrints/BP_Block
-MRUItem5=/Game/Downloaded_Assets/MeshConversions/MeshVette
-MRUItem6=/Game/Downloaded_Assets/MeshConversions/MeshCop
-MRUItem7=/Game/Downloaded_Assets/MeshConversions/MeshTow
-MRUItem8=/Game/Downloaded_Assets/MeshConversions/MeshSemi
-MRUItem9=/Game/Cyberpunk/Materials/Masters/R_Emissive
-MRUItem10=/Game/Cyberpunk/Materials/Masters/P_Emissive
-MRUItem11=/Game/Cyberpunk/Materials/Masters/Y_Emissive
-MRUItem12=/Game/Cyberpunk/Materials/Masters/G_Emissive
-MRUItem13=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_PoliceCarSUV_01
-MRUItem14=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_TruckTow
-MRUItem15=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_Truck_01
-MRUItem16=/Game/AssetsvilleTown/Meshes/Vehicles/PH_veh_Truck_01_Physics
-MRUItem17=/Game/Cyberpunk/Materials/Masters/Glow/M_Billboard_emissive
-MRUItem18=/Game/Cyberpunk/Materials/Instances/WinGlass/MI_WinGlass_Shop
-MRUItem19=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_SportClassic_01
-MRUItem20=/Game/Downloaded_Assets/Pocolov_Future_Transportation/Tiny_Cargo
-MRUItem21=/Game/Downloaded_Assets/Future_Cop/Car
-MRUItem22=/Engine/EngineSky/SM_SkySphere
-MRUItem23=/Game/Cyberpunk/Meshes/Structures/Building/SM_Building_Sup_A
-MRUItem24=/Game/Cyberpunk/Meshes/Structures/Bridge/SM_Bridge_A
-MRUItem25=/Game/Cyberpunk/Meshes/BG/SM_MERGED_BP_Shop_A31_5
-MRUItem26=/Game/Cyberpunk/Meshes/BG/SM_MERGED_MVK_CloneLineTool4
-MRUItem27=/Game/Input/Actions/IA_Move
-MRUItem28=/Game/Input/Actions/IA_Jump
-MRUItem29=/Game/NewInputAction
+MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem1=/Game/UI/W_MainHUD
+MRUItem2=/Game/BluePrints/BP_Block
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Engine/EngineFonts/Roboto
+MRUItem6=/Game/Downloaded_Assets/MeshConversions/MeshVette
+MRUItem7=/Game/Downloaded_Assets/MeshConversions/MeshCop
+MRUItem8=/Game/Downloaded_Assets/MeshConversions/MeshTow
+MRUItem9=/Game/Downloaded_Assets/MeshConversions/MeshSemi
+MRUItem10=/Game/Cyberpunk/Materials/Masters/R_Emissive
+MRUItem11=/Game/Cyberpunk/Materials/Masters/P_Emissive
+MRUItem12=/Game/Cyberpunk/Materials/Masters/Y_Emissive
+MRUItem13=/Game/Cyberpunk/Materials/Masters/G_Emissive
+MRUItem14=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_PoliceCarSUV_01
+MRUItem15=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_TruckTow
+MRUItem16=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_Truck_01
+MRUItem17=/Game/AssetsvilleTown/Meshes/Vehicles/PH_veh_Truck_01_Physics
+MRUItem18=/Game/Cyberpunk/Materials/Masters/Glow/M_Billboard_emissive
+MRUItem19=/Game/Cyberpunk/Materials/Instances/WinGlass/MI_WinGlass_Shop
+MRUItem20=/Game/AssetsvilleTown/Meshes/Vehicles/SK_veh_SportClassic_01
+MRUItem21=/Game/Downloaded_Assets/Pocolov_Future_Transportation/Tiny_Cargo
+MRUItem22=/Game/Downloaded_Assets/Future_Cop/Car
+MRUItem23=/Engine/EngineSky/SM_SkySphere
+MRUItem24=/Game/Cyberpunk/Meshes/Structures/Building/SM_Building_Sup_A
+MRUItem25=/Game/Cyberpunk/Meshes/Structures/Bridge/SM_Bridge_A
+MRUItem26=/Game/Cyberpunk/Meshes/BG/SM_MERGED_BP_Shop_A31_5
+MRUItem27=/Game/Cyberpunk/Meshes/BG/SM_MERGED_MVK_CloneLineTool4
+MRUItem28=/Game/Input/Actions/IA_Move
+MRUItem29=/Game/Input/Actions/IA_Jump
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
@@ -4069,32 +4087,13 @@ bImportAnimatedSparseVolumeTextures=True
 AssetName=
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 
 [ColorThemes]
 Theme0=New Theme
-
-[RecentColors]
-Color0=(R=16.043467,G=1.000000,B=1.000000,A=1.000000)
-Color1=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
-Color2=(R=310.455780,G=0.959381,B=1.000000,A=1.000000)
-Color3=(R=237.264771,G=0.625000,B=0.375000,A=1.000000)
-Color4=(R=24.643776,G=0.640323,B=0.376262,A=1.000000)
-Color5=(R=245.153229,G=0.838542,B=0.317708,A=1.000000)
-Color6=(R=220.146744,G=0.505626,B=0.348958,A=1.000000)
-Color7=(R=228.588013,G=0.411458,B=0.359375,A=1.000000)
-Color8=(R=25.267073,G=1.000000,B=0.625000,A=1.000000)
-Color9=(R=238.454697,G=0.458333,B=0.623960,A=1.000000)
-Color10=(R=228.480408,G=0.856117,B=0.333333,A=1.000000)
-Color11=(R=65.621300,G=1.000000,B=1.000000,A=1.000000)
-Color12=(R=28.044489,G=0.854167,B=0.755208,A=1.000000)
-Color13=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
-Color14=(R=305.684662,G=0.997954,B=1.000000,A=1.000000)
-Color15=(R=2.153681,G=1.000000,B=1.000000,A=1.000000)
-Color16=(R=358.553345,G=1.000000,B=1.000000,A=1.000000)
 
 [SkeletalMeshModelingTools]
 EditingModeActive=True
