messed with camera

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -654,6 +654,7 @@ LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -683,12 +684,10 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 OpenAssetsAtExit=/Game/BluePrints/BP_Block.BP_Block
 OpenAssetsAtExit=/Game/UI/W_MainHUD.W_MainHUD
-OpenAssetsAtExit=/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2600,43 +2599,43 @@ BP_ThirdPersonCharacter_C.Materials=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
-CameraComponent.Variable=True
-CameraComponent.TransformCommon=True
-CameraComponent.Sockets=True
-CameraComponent.CameraSettings=True
-CameraComponent.CameraOptions=True
-CameraComponent.Camera=True
-CameraComponent.ComponentTick=True
-CameraComponent.PostProcess=True
-CameraComponent.Tags=True
-CameraComponent.ComponentReplication=True
-CameraComponent.Activation=True
-CameraComponent.Cooking=True
-CameraComponent.Events=True
-SkeletalMeshComponent.Variable=True
-SkeletalMeshComponent.TransformCommon=True
-SkeletalMeshComponent.Sockets=True
-SkeletalMeshComponent.Animation=True
-SkeletalMeshComponent.Mesh=True
+CameraComponent.Variable=False
+CameraComponent.TransformCommon=False
+CameraComponent.Sockets=False
+CameraComponent.CameraSettings=False
+CameraComponent.CameraOptions=False
+CameraComponent.Camera=False
+CameraComponent.ComponentTick=False
+CameraComponent.PostProcess=False
+CameraComponent.Tags=False
+CameraComponent.ComponentReplication=False
+CameraComponent.Activation=False
+CameraComponent.Cooking=False
+CameraComponent.Events=False
+SkeletalMeshComponent.Variable=False
+SkeletalMeshComponent.TransformCommon=False
+SkeletalMeshComponent.Sockets=False
+SkeletalMeshComponent.Animation=False
+SkeletalMeshComponent.Mesh=False
 SkeletalMeshComponent.ComponentTick=True
-SkeletalMeshComponent.Clothing=True
-SkeletalMeshComponent.LeaderPoseComponent=True
-SkeletalMeshComponent.Physics=True
-SkeletalMeshComponent.AnimationRig=True
-SkeletalMeshComponent.Collision=True
-SkeletalMeshComponent.Deformer=True
-SkeletalMeshComponent.Lighting=True
-SkeletalMeshComponent.HLOD=True
-SkeletalMeshComponent.SkinWeights=True
-SkeletalMeshComponent.Rendering=True
-SkeletalMeshComponent.VirtualTexture=True
-SkeletalMeshComponent.Tags=True
-SkeletalMeshComponent.ComponentReplication=True
-SkeletalMeshComponent.Activation=True
-SkeletalMeshComponent.Cooking=True
-SkeletalMeshComponent.Navigation=True
-SkeletalMeshComponent.Events=True
-SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=False
+SkeletalMeshComponent.LeaderPoseComponent=False
+SkeletalMeshComponent.Physics=False
+SkeletalMeshComponent.AnimationRig=False
+SkeletalMeshComponent.Collision=False
+SkeletalMeshComponent.Deformer=False
+SkeletalMeshComponent.Lighting=False
+SkeletalMeshComponent.HLOD=False
+SkeletalMeshComponent.SkinWeights=False
+SkeletalMeshComponent.Rendering=False
+SkeletalMeshComponent.VirtualTexture=False
+SkeletalMeshComponent.Tags=False
+SkeletalMeshComponent.ComponentReplication=False
+SkeletalMeshComponent.Activation=False
+SkeletalMeshComponent.Cooking=False
+SkeletalMeshComponent.Navigation=False
+SkeletalMeshComponent.Events=False
+SkeletalMeshComponent.Materials=False
 CharacterMovementComponent.Variable=True
 CharacterMovementComponent.Sockets=True
 CharacterMovementComponent.Character Movement (General Settings)=True
@@ -2695,24 +2694,24 @@ BP_Block_C.Collision=True
 BP_Block_C.Input=True
 BP_Block_C.Physics=True
 BP_Block_C.Events=True
-StaticMeshComponent.Variable=True
-StaticMeshComponent.TransformCommon=True
-StaticMeshComponent.Sockets=True
-StaticMeshComponent.StaticMesh=True
-StaticMeshComponent.ComponentTick=True
-StaticMeshComponent.Physics=True
-StaticMeshComponent.Mesh Painting=True
-StaticMeshComponent.Collision=True
-StaticMeshComponent.HLOD=True
-StaticMeshComponent.Lighting=True
-StaticMeshComponent.Rendering=True
-StaticMeshComponent.VirtualTexture=True
-StaticMeshComponent.Tags=True
-StaticMeshComponent.ComponentReplication=True
-StaticMeshComponent.Cooking=True
-StaticMeshComponent.Navigation=True
-StaticMeshComponent.Events=True
-StaticMeshComponent.Materials=True
+StaticMeshComponent.Variable=False
+StaticMeshComponent.TransformCommon=False
+StaticMeshComponent.Sockets=False
+StaticMeshComponent.StaticMesh=False
+StaticMeshComponent.ComponentTick=False
+StaticMeshComponent.Physics=False
+StaticMeshComponent.Mesh Painting=False
+StaticMeshComponent.Collision=False
+StaticMeshComponent.HLOD=False
+StaticMeshComponent.Lighting=False
+StaticMeshComponent.Rendering=False
+StaticMeshComponent.VirtualTexture=False
+StaticMeshComponent.Tags=False
+StaticMeshComponent.ComponentReplication=False
+StaticMeshComponent.Cooking=False
+StaticMeshComponent.Navigation=False
+StaticMeshComponent.Events=False
+StaticMeshComponent.Materials=False
 SceneComponent.Variable=True
 SceneComponent.TransformCommon=True
 SceneComponent.Sockets=True
@@ -3344,6 +3343,26 @@ SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
+StaticMeshComponent.LOD=False
+StaticMeshComponent.RayTracing=False
+StaticMeshComponent.TextureStreaming=False
+StaticMeshComponent.MaterialParameters=False
+StaticMeshComponent.Mobile=False
+StaticMeshComponent.Replication=False
+StaticMeshComponent.AssetUserData=False
+SkeletalMeshComponent.SkeletalMesh=False
+SkeletalMeshComponent.Optimization=False
+SkeletalMeshComponent.MaterialParameters=False
+SkeletalMeshComponent.LOD=False
+SkeletalMeshComponent.TextureStreaming=False
+SkeletalMeshComponent.Mobile=False
+SkeletalMeshComponent.RayTracing=False
+SkeletalMeshComponent.Replication=False
+SkeletalMeshComponent.AssetUserData=False
+CameraComponent.Physics=False
+CameraComponent.Replication=False
+CameraComponent.AssetUserData=False
+CameraComponent.Navigation=False
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -3791,6 +3810,11 @@ PropertyWrapper.Variable=False
 StaticMeshActor.StaticMesh=False
 MaterialEditorInstanceConstant.General=False
 StaticMesh.Collision=False
+PreviewMaterial.Material=False
+PreviewMaterial.Translucency=False
+CameraComponent.ComponentTick=False
+SkeletalMeshComponent.ComponentTick=False
+StaticMeshComponent.ComponentTick=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
@@ -3855,6 +3879,7 @@ MRUItem29=/Game/Input/Actions/IA_Jump
 /Game/Downloaded_Assets/MeshConversions/MeshCop.MeshCop=1
 /Engine/EngineFonts/Roboto.Roboto=1
 /Game/UI/W_MainHUD.W_MainHUD=1
+/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3910,7 +3935,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
@@ -4094,6 +4119,28 @@ ChangeVariableType_Warning=False
 
 [ColorThemes]
 Theme0=New Theme
+
+[RecentColors]
+Color0=(R=358.577057,G=1.000000,B=1.000000,A=1.000000)
+Color1=(R=358.553345,G=1.000000,B=1.000000,A=1.000000)
+Color2=(R=129.216553,G=1.000000,B=0.900000,A=1.000000)
+Color3=(R=3.557482,G=1.000000,B=0.900000,A=1.000000)
+Color4=(R=358.553345,G=1.000000,B=1.000000,A=1.000000)
+Color5=(R=2.153681,G=1.000000,B=1.000000,A=1.000000)
+Color6=(R=305.684662,G=0.997954,B=1.000000,A=1.000000)
+Color7=(R=28.044489,G=0.854167,B=0.755208,A=1.000000)
+Color8=(R=65.621300,G=1.000000,B=1.000000,A=1.000000)
+Color9=(R=228.480408,G=0.856117,B=0.333333,A=1.000000)
+Color10=(R=238.454697,G=0.458333,B=0.623960,A=1.000000)
+Color11=(R=25.267073,G=1.000000,B=0.625000,A=1.000000)
+Color12=(R=228.588013,G=0.411458,B=0.359375,A=1.000000)
+Color13=(R=220.146744,G=0.505626,B=0.348958,A=1.000000)
+Color14=(R=245.153229,G=0.838542,B=0.317708,A=1.000000)
+Color15=(R=24.643776,G=0.640323,B=0.376262,A=1.000000)
+Color16=(R=237.264771,G=0.625000,B=0.375000,A=1.000000)
+Color17=(R=310.455780,G=0.959381,B=1.000000,A=1.000000)
+Color18=(R=117.739380,G=0.981845,B=1.000000,A=1.000000)
+Color19=(R=16.043467,G=1.000000,B=1.000000,A=1.000000)
 
 [SkeletalMeshModelingTools]
 EditingModeActive=True
