--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -477,6 +477,9 @@ W_MainHUD_C=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.D
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 K2Node=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 K2Node_FormatText=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.lanePositions,PropertyWrapper.DefaultValueCategory.forwardSpeed,K2Node_VariableGet.DefaultValueCategory.lanePositions,K2Node_VariableGet.DefaultValueCategory.sidewalkMeshes,K2Node_VariableSet.DefaultValueCategory.lanePositions,K2Node_VariableSet.DefaultValueCategory.forwardSpeed
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/
@@ -2695,13 +2698,13 @@ BP_Block_C.Input=True
 BP_Block_C.Physics=True
 BP_Block_C.Events=True
 StaticMeshComponent.Variable=False
-StaticMeshComponent.TransformCommon=False
+StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=False
 StaticMeshComponent.StaticMesh=False
 StaticMeshComponent.ComponentTick=False
 StaticMeshComponent.Physics=False
 StaticMeshComponent.Mesh Painting=False
-StaticMeshComponent.Collision=False
+StaticMeshComponent.Collision=True
 StaticMeshComponent.HLOD=False
 StaticMeshComponent.Lighting=False
 StaticMeshComponent.Rendering=False
@@ -3363,6 +3366,9 @@ CameraComponent.Physics=False
 CameraComponent.Replication=False
 CameraComponent.AssetUserData=False
 CameraComponent.Navigation=False
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -3656,6 +3662,7 @@ PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
+BoxComponent="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3815,6 +3822,7 @@ PreviewMaterial.Translucency=False
 CameraComponent.ComponentTick=False
 SkeletalMeshComponent.ComponentTick=False
 StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Collision=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
